--- a/etsi_its_coding/etsi_its_coding/package.xml
+++ b/etsi_its_coding/etsi_its_coding/package.xml
@@ -23,6 +23,7 @@
   <depend>etsi_its_mapem_ts_coding</depend>
   <depend>etsi_its_spatem_ts_coding</depend>
   <depend>etsi_its_vam_ts_coding</depend>
+  <depend>etsi_its_mcm_thi_prima_coding</depend>
   <depend>ros_environment</depend>
 
   <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
