--- a/etsi_its_conversion/etsi_its_conversion/CMakeLists.txt
+++ b/etsi_its_conversion/etsi_its_conversion/CMakeLists.txt
@@ -18,6 +18,7 @@ if(${ROS_VERSION} EQUAL 2)
   find_package(etsi_its_mapem_ts_conversion REQUIRED)
   find_package(etsi_its_spatem_ts_conversion REQUIRED)
   find_package(etsi_its_vam_ts_conversion REQUIRED)
+  find_package(etsi_its_mcm_thi_prima_conversion REQUIRED)
   find_package(rclcpp REQUIRED)
   find_package(rclcpp_components REQUIRED)
   find_package(udp_msgs REQUIRED)
@@ -43,6 +44,7 @@ if(${ROS_VERSION} EQUAL 2)
     etsi_its_mapem_ts_conversion
     etsi_its_spatem_ts_conversion
     etsi_its_vam_ts_conversion
+    etsi_its_mcm_thi_prima_conversion
     rclcpp
     rclcpp_components
     udp_msgs
@@ -82,6 +84,7 @@ elseif(${ROS_VERSION} EQUAL 1)
     etsi_its_mapem_ts_conversion
     etsi_its_spatem_ts_conversion
     etsi_its_vam_ts_conversion
+    etsi_its_mcm_thi_prima_conversion
     nodelet
     roscpp
     udp_msgs
@@ -99,6 +102,7 @@ elseif(${ROS_VERSION} EQUAL 1)
       etsi_its_mapem_ts_conversion
       etsi_its_spatem_ts_conversion
       etsi_its_vam_ts_conversion
+      etsi_its_mcm_thi_prima_conversion
       nodelet
       roscpp
       udp_msgs
